// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activity class should add timesheet entries 1`] = `
Object {
  "body": Object {
    "count": 1,
    "from": 0,
    "fullResultSize": 0,
    "values": Array [
      Object {
        "activity": Object {
          "id": 45239,
          "url": "api.tripletex.io/v2/activity/45239",
        },
        "chargeable": false,
        "chargeableHours": 0,
        "comment": "This is from bjerkio/tripletexjs",
        "date": "2022-01-31",
        "employee": Object {
          "id": 1734852,
          "url": "api.tripletex.io/v2/employee/1734852",
        },
        "hourlyCost": 0,
        "hourlyCostPercentage": 0,
        "hourlyRate": 0,
        "hours": 20,
        "id": 1211634,
        "invoice": null,
        "locked": false,
        "project": null,
        "timeClocks": Array [],
        "url": "api.tripletex.io/v2/timesheet/entry/1211634",
        "version": 0,
      },
    ],
    "versionDigest": null,
  },
  "error": undefined,
  "success": true,
}
`;

exports[`activity class should get status on timesheet month 1`] = `
Array [
  Object {
    "approved": false,
    "approvedBy": null,
    "approvedDate": null,
    "approvedUntilDate": null,
    "completed": false,
    "employee": Object {
      "id": 1734852,
      "url": "api.tripletex.io/v2/employee/1734852",
    },
    "flexSummary": Object {
      "change": -141.09,
      "incomingHourBalance": -226.64,
      "outgoingHourBalance": -367.73,
    },
    "hourSummary": Object {
      "budgetChargeableHours": 0,
      "chargeableHours": 0,
      "hourlyWageHoursWithPay": 0,
      "hoursWithPay": 31.41,
      "nonChargeableHours": 31.41,
      "nonChargeableHoursWithPay": 31.41,
      "standardTime": 172.5,
      "sumHours": 31.41,
    },
    "hoursPayout": 0,
    "id": 83,
    "monthYear": "2022-03",
    "timesheetEntries": Array [
      Object {
        "id": 1211635,
        "url": "api.tripletex.io/v2/timesheet/entry/1211635",
      },
    ],
    "url": "api.tripletex.io/v2/timesheet/month/83",
    "vacationPayout": 0,
    "vacationSummary": Object {
      "incomingVacationBalance": 24.466666666666665,
      "outgoingVacationBalance": 24.466666666666665,
      "vacationTakenInPeriod": 0,
      "vacationTakenThisYear": 0.5333333333333333,
    },
    "version": 0,
  },
]
`;

exports[`activity class should list timesheet entries 1`] = `
Array [
  Object {
    "activity": Object {
      "id": 45239,
      "url": "api.tripletex.io/v2/activity/45239",
    },
    "chargeable": false,
    "chargeableHours": 0,
    "comment": "",
    "date": "2022-01-01",
    "employee": Object {
      "id": 1734852,
      "url": "api.tripletex.io/v2/employee/1734852",
    },
    "hourlyCost": 0,
    "hourlyCostPercentage": 0,
    "hourlyRate": 0,
    "hours": 4,
    "id": 1211627,
    "invoice": null,
    "locked": false,
    "project": null,
    "timeClocks": Array [],
    "url": "api.tripletex.io/v2/timesheet/entry/1211627",
    "version": 0,
  },
  Object {
    "activity": Object {
      "id": 45239,
      "url": "api.tripletex.io/v2/activity/45239",
    },
    "chargeable": false,
    "chargeableHours": 0,
    "comment": "",
    "date": "2022-01-02",
    "employee": Object {
      "id": 1734852,
      "url": "api.tripletex.io/v2/employee/1734852",
    },
    "hourlyCost": 0,
    "hourlyCostPercentage": 0,
    "hourlyRate": 0,
    "hours": 4,
    "id": 1211628,
    "invoice": null,
    "locked": false,
    "project": null,
    "timeClocks": Array [],
    "url": "api.tripletex.io/v2/timesheet/entry/1211628",
    "version": 0,
  },
  Object {
    "activity": Object {
      "id": 45239,
      "url": "api.tripletex.io/v2/activity/45239",
    },
    "chargeable": false,
    "chargeableHours": 0,
    "comment": "",
    "date": "2022-01-04",
    "employee": Object {
      "id": 1734852,
      "url": "api.tripletex.io/v2/employee/1734852",
    },
    "hourlyCost": 0,
    "hourlyCostPercentage": 0,
    "hourlyRate": 0,
    "hours": 7,
    "id": 1211629,
    "invoice": null,
    "locked": false,
    "project": null,
    "timeClocks": Array [],
    "url": "api.tripletex.io/v2/timesheet/entry/1211629",
    "version": 0,
  },
  Object {
    "activity": Object {
      "id": 45239,
      "url": "api.tripletex.io/v2/activity/45239",
    },
    "chargeable": false,
    "chargeableHours": 0,
    "comment": "",
    "date": "2022-01-05",
    "employee": Object {
      "id": 1734852,
      "url": "api.tripletex.io/v2/employee/1734852",
    },
    "hourlyCost": 0,
    "hourlyCostPercentage": 0,
    "hourlyRate": 0,
    "hours": 4,
    "id": 1211630,
    "invoice": null,
    "locked": false,
    "project": null,
    "timeClocks": Array [],
    "url": "api.tripletex.io/v2/timesheet/entry/1211630",
    "version": 0,
  },
  Object {
    "activity": Object {
      "id": 45239,
      "url": "api.tripletex.io/v2/activity/45239",
    },
    "chargeable": false,
    "chargeableHours": 0,
    "comment": "",
    "date": "2022-01-06",
    "employee": Object {
      "id": 1734852,
      "url": "api.tripletex.io/v2/employee/1734852",
    },
    "hourlyCost": 0,
    "hourlyCostPercentage": 0,
    "hourlyRate": 0,
    "hours": 2,
    "id": 1211631,
    "invoice": null,
    "locked": false,
    "project": null,
    "timeClocks": Array [],
    "url": "api.tripletex.io/v2/timesheet/entry/1211631",
    "version": 0,
  },
  Object {
    "activity": Object {
      "id": 45240,
      "url": "api.tripletex.io/v2/activity/45240",
    },
    "chargeable": false,
    "chargeableHours": 0,
    "comment": "",
    "date": "2022-01-03",
    "employee": Object {
      "id": 1734852,
      "url": "api.tripletex.io/v2/employee/1734852",
    },
    "hourlyCost": 0,
    "hourlyCostPercentage": 0,
    "hourlyRate": 0,
    "hours": 4,
    "id": 1211632,
    "invoice": null,
    "locked": false,
    "project": null,
    "timeClocks": Array [],
    "url": "api.tripletex.io/v2/timesheet/entry/1211632",
    "version": 0,
  },
]
`;

exports[`activity class should update timesheet entries 1`] = `
Object {
  "body": Object {
    "count": 1,
    "from": 0,
    "fullResultSize": 0,
    "values": Array [
      Object {
        "activity": Object {
          "id": 45239,
          "url": "api.tripletex.io/v2/activity/45239",
        },
        "chargeable": false,
        "chargeableHours": 0,
        "comment": "This is from bjerkio/tripletexjs",
        "date": "2022-01-31",
        "employee": Object {
          "id": 1734852,
          "url": "api.tripletex.io/v2/employee/1734852",
        },
        "hourlyCost": 0,
        "hourlyCostPercentage": 0,
        "hourlyRate": 0,
        "hours": 15,
        "id": 1211634,
        "invoice": null,
        "locked": false,
        "project": null,
        "timeClocks": Array [],
        "url": "api.tripletex.io/v2/timesheet/entry/1211634",
        "version": 1,
      },
    ],
    "versionDigest": null,
  },
  "error": undefined,
  "success": true,
}
`;
